@@ -1,48 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- You may freely edit this file. See harness/README in the NetBeans platform -->
+<!-- for some information on what you could do (e.g. targets to override). -->
+<!-- If you delete this file and reopen the project it will be recreated. -->
+<project name="org.netbeans.performance.enterprise" default="netbeans" basedir=".">
+    <description>Builds, tests, and runs the project org.netbeans.performance.enterprise</description>
 
-<!--
-DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+    <property name="test.timeout" value="3600000"/>
 
-Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+    <condition property="j2ee.appserver.path" value="e:\\space\\appserver">
+        <os family="windows"/>
+    </condition>
+    <condition property="j2ee.appserver.path" value="/space/appserver">
+        <os family="unix"/>
+    </condition>
 
+    <condition property="tomcat.webserver.path" value="e:\\space\\tomcat">
+        <os family="windows"/>
+    </condition>
+    <condition property="tomcat.webserver.path" value="/space/tomcat">
+        <os family="unix"/>
+    </condition>
 
-The contents of this file are subject to the terms of either the GNU
-General Public License Version 2 only ("GPL") or the Common
-Development and Distribution License("CDDL") (collectively, the
-"License"). You may not use this file except in compliance with the
-License. You can obtain a copy of the License at
-http://www.netbeans.org/cddl-gplv2.html
-or nbbuild/licenses/CDDL-GPL-2-CP. See the License for the
-specific language governing permissions and limitations under the
-License.  When distributing the software, include this License Header
-Notice in each file and include the License file at
-nbbuild/licenses/CDDL-GPL-2-CP.  Sun designates this
-particular file as subject to the "Classpath" exception as provided
-by Sun in the GPL Version 2 section of the License file that
-accompanied this code. If applicable, add the following below the
-License Header, with the fields enclosed by brackets [] replaced by
-your own identifying information:
-"Portions Copyrighted [year] [name of copyright owner]"
+    <condition property="nbjdk.home" value="e:\\space\\hudson\\jdks\\jdk1.6.0_10">
+        <os family="windows"/>
+    </condition>
+    <condition property="nbjdk.home" value="/space/hudson/jdks/jdk1.6.0_10">
+        <os family="unix"/>
+    </condition>
 
-Contributor(s):
-
- The Original Software is NetBeans. The Initial Developer of the Original
- Software is Sun Microsystems, Inc. Portions Copyright 1997-2007 Sun
- Microsystems, Inc. All Rights Reserved.
-
-If you wish your version of this file to be governed by only the CDDL
-or only the GPL Version 2, indicate your decision by adding
-"[Contributor] elects to include this software in this distribution
-under the [CDDL or GPL Version 2] license." If you do not indicate a
-single choice of license, a recipient has the option to distribute
-your version of this file under either the CDDL, the GPL Version 2 or
-to extend the choice of license to its licensees as provided above.
-However, if you add GPL Version 2 code and therefore, elected the GPL
-Version 2 license, then the option applies only if the new code is
-made subject to such option by the copyright holder.
--->
-
-<project basedir="." default="netbeans" name="performance/enterprise">
-    <description>Builds, tests, and runs the project entpackperftests</description>
-    <import file="../../nbbuild/templates/projectized.xml"/>
+    <property name="test.run.args" value="-client -Xss2m -Xms32m -Xmx512m -XX:PermSize=32m -XX:MaxPermSize=200m -Xverify:none -ea -Dcom.sun.aas.installRoot=&quot;${j2ee.appserver.path}&quot; -Dtomcat.installRoot=&quot;${tomcat.webserver.path}&quot;"/>
+    <target name="test" description="Uses test-single to run each suite in different VM">
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseSetupTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions1Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions2Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions3Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions4Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions5Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions6Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions7Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\MeasureEnterpriseActions8Test*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">         
+            <param name="test.includes" value="**\*"/>
+            <param name="test.type" value="unit"/>
+        </antcall>
+    </target>
+    <import file="nbproject/build-impl.xml"/>
 </project>
