@@ -1,48 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- You may freely edit this file. See harness/README in the NetBeans platform -->
+<!-- for some information on what you could do (e.g. targets to override). -->
+<!-- If you delete this file and reopen the project it will be recreated. -->
+<project name="org.netbeans.performance.mobility" default="netbeans" basedir=".">
+    <description>Builds, tests, and runs the project org.netbeans.performance.mobility</description>
 
-<!--
-DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+    <property name="nbextra.dir" location="../../../nbextra"/>
+    <property name="test.timeout" value="3600000"/>
+    <property name="test.run.args" value="-client -Xss2m -Xms32m -Xmx512m -XX:PermSize=32m -XX:MaxPermSize=200m -Xverify:none -ea -Dcom.sun.aas.installRoot=&quot;${j2ee.appserver.path}&quot; -Dtomcat.installRoot=&quot;${tomcat.webserver.path}&quot;"/>
 
-Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+    <target name="test-preinit" depends="init, prepare-wtk"/>
 
+    <condition property="nbjdk.home" value="e:\\space\\hudson\\jdks\\jdk1.6.0_10">
+        <os family="windows"/>
+    </condition>
+    <condition property="nbjdk.home" value="/space/hudson/jdks/jdk1.6.0_10">
+        <os family="unix"/>
+    </condition>
 
-The contents of this file are subject to the terms of either the GNU
-General Public License Version 2 only ("GPL") or the Common
-Development and Distribution License("CDDL") (collectively, the
-"License"). You may not use this file except in compliance with the
-License. You can obtain a copy of the License at
-http://www.netbeans.org/cddl-gplv2.html
-or nbbuild/licenses/CDDL-GPL-2-CP. See the License for the
-specific language governing permissions and limitations under the
-License.  When distributing the software, include this License Header
-Notice in each file and include the License file at
-nbbuild/licenses/CDDL-GPL-2-CP.  Sun designates this
-particular file as subject to the "Classpath" exception as provided
-by Sun in the GPL Version 2 section of the License file that
-accompanied this code. If applicable, add the following below the
-License Header, with the fields enclosed by brackets [] replaced by
-your own identifying information:
-"Portions Copyrighted [year] [name of copyright owner]"
+    <target name="set-wtk-path" unless="wtk.zipfile.name">
+        <condition property="wtk.zipfile.name" value="wtk252-windows.zip">
+            <os family="windows"/>
+        </condition>
+        <condition property="wtk.zipfile.name" value="wtk252-linux.zip">
+            <os family="unix" name="linux"/>
+        </condition>
+    </target>
 
-Contributor(s):
+    <target name="prepare-wtk" depends="set-wtk-path">
+        <fail unless="wtk.zipfile.name" message="Not supported platform."/>
 
-The Original Software is NetBeans. The Initial Developer of the Original
-Software is Sun Microsystems, Inc. Portions Copyright 1997-2006 Sun
-Microsystems, Inc. All Rights Reserved.
+        <unzip src="${nbextra.dir}/data/${wtk.zipfile.name}" dest="${netbeans.dest.dir}/mobility8"/>
+    </target>
 
-If you wish your version of this file to be governed by only the CDDL
-or only the GPL Version 2, indicate your decision by adding
-"[Contributor] elects to include this software in this distribution
-under the [CDDL or GPL Version 2] license." If you do not indicate a
-single choice of license, a recipient has the option to distribute
-your version of this file under either the CDDL, the GPL Version 2 or
-to extend the choice of license to its licensees as provided above.
-However, if you add GPL Version 2 code and therefore, elected the GPL
-Version 2 license, then the option applies only if the new code is
-made subject to such option by the copyright holder.
+<!-- why UML is here?
+    <target name="test" description="Uses test-single to run each suite in different VM">
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLSetupTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLActionsTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLDialogsTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\*"/>
+            <param name="test.type" value="unit"/>
+        </antcall>
+    </target>
 -->
 
-<project basedir="." default="netbeans" name="enterprise/performancetests">
-    <description>Builds, tests, and runs the project entpackperftests</description>
-    <import file="../../nbbuild/templates/projectized.xml"/>
+    <import file="nbproject/build-impl.xml"/>
 </project>
